# Leaffliction

./: .gitignore  Augmentation.py  Distribution.py  GUIDE.md  GUIDE_IMPLEMENTATION.md  README.md  Transformation.py  app.py  color_hist.py  predict.py  predict_demo.ipynb  pyproject.toml  requirements.old.txt  requirements.txt  requirements_complete.txt  signature.txt  train.py
binder/: requirements.txt
docs/: GUIDE.md  GUIDE_IMPLEMENTATION.md
leaffliction/: augmentations.py  cli.py  dataset.py  model.py  plotting.py  predict_pipeline.py  train_pipeline.py  transformations.py  utils.py
worked/model/: config.json  labels.json  model.pth
